Fix:headerのz-indexを修正
前要素の中で一番先頭だと一眼でわかるよう999にする

--- a/_assets/scss/layout/_header.scss
+++ b/_assets/scss/layout/_header.scss
@@ -2,7 +2,7 @@
 //ヘッダー
 .l-header {
   position: fixed;
-  z-index: 1;
+  z-index: 999;
   width: 100%;
   height: global.$header-height-sp;
   background-color: global.$color-text-white;
